--- a/SendSMSHost/Content/Site.css
+++ b/SendSMSHost/Content/Site.css
@@ -15,3 +15,25 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.smsContactNumber {
+    color: darkblue;
+    font-size: small;
+}
+
+.smsContactName {
+    color: darkred;
+    font-style: italic;
+    font-size: small;
+}
+.smsMessage {
+    color: gray;
+    font-size: small;
+    font-style: italic;
+}
+.smsTimestamp {
+    color: gray;
+    font-size: small;
+    font-style: italic;
+    text-align:right;
+}
