--- a/SendSMSHost/Views/Shared/_Layout.cshtml
+++ b/SendSMSHost/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("Index met Vue", "IndexVue", "Home", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Sync", "Index", "Sync", new { area = "" }, null)</li>
                 </ul>
             </div>
         </div>
