Gefiltererde lijst opvragen voor telefoon

--- a/SendSMSHost/Views/Home/IndexVue.cshtml
+++ b/SendSMSHost/Views/Home/IndexVue.cshtml
@@ -95,7 +95,7 @@
                 </tr>
             </table>
             <button v-on:click="toEditMode(true)" class="btn btn-primary">Edit</button>
-            <button v-on:click="deleteBook()" class="btn btn-danger">Delete</button>
+            <button v-on:click="deleteSms()" class="btn btn-danger">Delete</button>
         </div>
     </article>
 </article>
