--- a/SendSMSHost/Views/Shared/_Layout.cshtml
+++ b/SendSMSHost/Views/Shared/_Layout.cshtml
@@ -16,13 +16,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("SmsSender", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("Index met Vue", "IndexVue", "Home", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("Sync", "Index", "Sync", new { area = "" }, null)</li>
                 </ul>
             </div>
