Experimenteren met Chart.js

--- a/SendSMSHost/Views/Home/Index.cshtml
+++ b/SendSMSHost/Views/Home/Index.cshtml
@@ -232,16 +232,7 @@
     </script>
 
     <!--Reference to Vue code -->
-    <script src="~/Scripts/App.js"></script>
-
-    <!--Start EventSource on Page Load -->
-    <script type="text/javascript">
-        var clientName;
-        window.onload = function ()
-        {
-            clientName = 'web' + Date.now();
-        }
-    </script>
+    <script src="~/ViewModels/Home/App.js"></script>
 
     <!--The jQuery library is required and is referenced by default in _Layout.cshtml. -->
     <!--Reference the SignalR library. -->
