--- a/SendSMSHost/Views/Dashboard/Index.cshtml
+++ b/SendSMSHost/Views/Dashboard/Index.cshtml
@@ -11,11 +11,7 @@
     </header>
 
     <div>
-        <line-chart></line-chart>
-    </div>
-
-    <div>
-        <line-chart-2></line-chart-2>
+        <line-chart :chart-data="graph1_data" :options="graph1_options"></line-chart>
     </div>
 
 </article>
