opnieuw problemen met Status Id

--- a/SendSMSHost/Views/Dashboard/Index.cshtml
+++ b/SendSMSHost/Views/Dashboard/Index.cshtml
@@ -11,7 +11,7 @@
     </header>
 
     <div>
-        <line-chart :chart-data="graph1_data" :options="graph1_options"></line-chart>
+        <bar-chart :chart-data="graph1_data" :options="graph1_options"></bar-chart>
     </div>
 
 </article>
