Webpagina - SignalR methodes afgewerkt

--- a/SendSMSHost/Views/Dashboard/Index.cshtml
+++ b/SendSMSHost/Views/Dashboard/Index.cshtml
@@ -18,8 +18,11 @@
 
 @section scripts{
     <script src="~/Scripts/vue.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
-    <script src="https://unpkg.com/vue-chartjs/dist/vue-chartjs.min.js"></script>
+    <script src="~/Scripts/Chart-2.7.1.min.js"></script>
+    <script src="~/Scripts/Vue-ChartJs-3.3.1.min.js"></script>
+
+    @*<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
+    <script src="https://unpkg.com/vue-chartjs/dist/vue-chartjs.min.js"></script>*@
 
     <!--Reference to Vue code -->
     <script src="~/ViewModels/Dashboard/App.js"></script>
